fix(release.yml): Specify "Human Chat Completions.app" explicity in zip build files step on macos
fix(setup.iss): Change the AppVerName to better one

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Zip macOS App
         run: |
           cd build/macos
-          zip -r human_chat_completions_${{ env.BUILD_VERSION }}_macos.zip ./*
+          zip -r human_chat_completions_${{ env.BUILD_VERSION }}_macos.zip "Human Chat Completions.app"
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
