--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release for Linux, mac and Windows
 
 on:
   release:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -29,7 +29,7 @@ jobs:
           pip install flet==0.28.3
           # Generate requirements.txt for flet build
           echo "flet==0.28.3" > requirements.txt
-        
+
       - name: Update src/__version__.py in one line using bash
         run: |
           # VERSION環境変数からバージョン番号を取得して、1行でファイルに書き込む
@@ -67,7 +67,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -75,12 +75,12 @@ jobs:
           pip install flet==0.28.3
           # Generate requirements.txt for flet build
           echo "flet==0.28.3" > requirements.txt
-      
+
       - name: Update src/__version.py__ in one line using PowerShell
         run: |
           # PowerShellの構文でバージョン番号を取得
           $versionNum = "${{ github.ref_name }}".Substring(1)
-          
+
           # Add-Content コマンドでファイルに書き込む
           # "-Encoding UTF8" を指定して文字化けを防ぐ
           "VERSION = `"$versionNum`"" | Set-Content -Path src/__version__.py -Encoding UTF8
@@ -121,7 +121,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -129,9 +129,9 @@ jobs:
           pip install flet==0.28.3
           # Generate requirements.txt for flet build
           echo "flet==0.28.3" > requirements.txt
-      
+
       - name: Update src/__version__.py in one line using bash
-        run: |          
+        run: |
           # VERSION環境変数からバージョン番号を取得して、1行でファイルに書き込む
           echo "VERSION = \"$VERSION\"" > src/__version__.py
         shell: bash
